# EthixionLite-BE

./: Cargo.toml  Rocket.toml
ML/: Ethixion_Prechecks.py
src/: authorization.rs  db.rs  encryption.rs  main.rs
src/models/: api.rs  api_alerts.rs  api_enc_data_key.rs  daily_usage.rs  mod.rs  request_logs.rs  user_verifications.rs  users.rs
static/fonts/: styles.css
templates/: ethixionPage.html.tera
