[package]
name = "ethixion"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
jsonwebtoken = "9"
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "postgres", "chrono", "ipnetwork"] }
argon2 = "0.5"
lazy_static = "1.4"
once_cell = "1.17"
rand = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
time = "0.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
rocket_cors = "0.6"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }                  
url= "2"
lettre = { version = "0.10", features = ["smtp-transport", "builder"] }
ipgeolocate = "0.2.0"
uuid = { version = "1.3", features = ["v4"] }
percent-encoding = "2.3"
aes-gcm = "0.10"
block-modes = "0.9"
rsa = "0.9"
sha2 = "0.10" 
pkcs8 = "0.10"
base64 = "0.22"



